# cpp_virtual_machine

./: CMakeLists.txt  README.md  main.cpp
headers/: compiler.h  create.h  definitions.h  errors.h  lexer.h  logger.h  machine.h
source/: compiler.cpp  create.cpp  lexer.cpp  logger.cpp  machine.cpp
